Fix logo
Everything is complete but one last thing. The logo padding was too big because the font-size for the logo was too big. This should fix the problem by cutting the logo font size in half.

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -11,7 +11,7 @@
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 24px;
   font-weight: 900;
   color: tomato;
   background: white;
